Show Roles from SID table in ProjectAccessComponent